gate-centos-lb-ceph-online-multinodes/openstack/glance/Service_glance-api.yaml

# Source: glance/templates/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance-api
spec:
  ports:
    - name: g-api
      port: 9292
    
  selector:
    release_group: glance
    application: glance
    component: api
